# langgraph-agents-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
docs/: index.html
lab/: __init__.py
lab/common/: __init__.py  fake_model.py  model_factory.py  pretty.py  state.py  tools.py
lab/m1_single_agent/: 01_bare_state_graph.py  02_state_reducers.py  03_single_llm_node.py  04_conditional_edges.py  05_handbuilt_react_loop.py  06_tools_condition_builtin.py  07_prebuilt_react_agent.py  __init__.py
lab/m2_tools_and_failures/: 01_tool_raises_default.py  02_tool_raises_custom.py  03_tool_raises_off.py  04_invalid_tool_args.py  05_tool_timeout.py  06_retry_with_backoff.py  07_fallbacks.py  08_rate_limit_429.py  09_infinite_loop_recursion.py  10_graceful_cap.py  11_hallucinated_tool.py  12_wrong_tool_or_ignored_result.py  13_determinism.py  14_hitl_interrupt_before.py  15_hitl_dynamic_interrupt.py  __init__.py
lab/m3_multi_agent/: 01_shared_state_two_nodes.py  02_handoff_command.py  03_network_routing.py  04_handoff_as_tool.py  __init__.py
lab/m4_orchestrator/: 01_supervisor_from_scratch.py  02_supervisor_structured_route.py  03_orchestrator_worker_mapreduce.py  04_hierarchical_teams.py  __init__.py
lab/m5_advanced/: 01_memory_saver_threads.py  02_sqlite_saver_persist.py  03_time_travel.py  04_stream_modes.py  05_token_streaming.py  06_subgraphs.py  07_parallel_fanout_reducer.py  08_structured_output.py  (+2 more)
tests/: conftest.py  test_common.py  test_m1_single_agent.py  test_m2_failures.py  test_m3_multi_agent.py  test_m4_orchestrator.py  test_m5_advanced.py
